--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
                     <img src="./assets/database.svg" alt="newtwork" height="30">
                 </div>
-                <h3 class="fs-2 text-body-emphasis">Data Transformation</h3>
+                <h3 class="fs-2 text-body-emphasis">Transformation</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
                     enim ad minim veniam, quis nostrud exercitation ullamco laboris 
