--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     </div>
 
     <div class="container pt-5">
-        <h2 class="border-bottom">Licenses and Education</h2>
+        <h2 class="border-bottom">Licenses and Degrees</h2>
         <div class="row row-cols-1 row-cols-md-3 py-5 text-center">
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">State Bar of Texas</h4><br>
+                    <h1 class="my-0 fw-normal">LAW</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">LAW</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">State Bar of Texas</h4><br>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>10 users included</li>
                         <li>2 GB of storage</li>
@@ -114,10 +114,10 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Texas Board of<br>Public Accountancy</h4>
+                    <h1 class="my-0">CPA</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">CPA</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">Texas Board of<br>Public Accountancy</h4>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>20 users included</li>
                         <li>10 GB of storage</li>
@@ -131,10 +131,10 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Georgetown University<br>Law Center</h4>
+                    <h1 class="my-0">LLM</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">LLM</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">Georgetown University<br>Law Center</h4>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>Taxation</li>
                         <li>2001</li>
@@ -145,10 +145,10 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">The University of Texas<br>at Dallas</h4>
+                    <h1 class="my-0">MS</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">MS</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">The University of Texas<br>at Dallas</h4>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>Accounting</li>
                         <li>2000</li>
@@ -159,10 +159,10 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">Southern Methodist University<br>School of Law</h4>
+                    <h1 class="my-0">JD</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">JD</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">Southern Methodist University<br>School of Law</h4>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>Legal</li>
                         <li>1997</li>
@@ -173,10 +173,10 @@
             <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm">
                     <div class="card-header py-3">
-                    <h4 class="my-0 fw-normal">The University of Texas<br>at Austin</h4>
+                    <h1 class="my-0">BBA</h1>
                     </div>
                     <div class="card-body">
-                    <h1 class="card-title pricing-card-title">BBA</h1>
+                    <h4 class="card-title pricing-card-title fw-normal">The University of Texas<br>at Austin</h4>
                     <!-- <ul class="list-unstyled mt-3 mb-4">
                         <li>Finance</li>
                         <li>2001</li>
